--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </div>
 
   <script>
-    const webAppUrl = "https://script.google.com/macros/s/AKfycbxTiIsxhcCbtCFjvptIlQd2617UYZv9iHVA-8uVUIM4aTxmG108e_mVsHWFn-NE6C_iDQ/exec"; // URL de tu Google Apps Script
+    const webAppUrl "=https://script.google.com/macros/s/AKfycbyVuta60lMcL9THJKfghkX8JLIfHTCvOxpLq51ni42avtAaRDwCpZ3sJJgtbyzKyqKocw/exec" ; // URL de tu Google Apps Script
 
     let formState = 'initial'; // 'initial' (registrar) o 'readyForNew' (limpiar)
     let savedTelegramMessage = ''; // Para guardar el mensaje de Telegram temporalmente
